recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:15: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(length/3.0)
            ^Koch:17: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(length/3.0)
            ^Koch:19: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(length/3.0)
            ^Koch:21: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(length/3.0)
            ^